# DeepreadQA

./: .env.example  .gitignore  README.md  comparsion.md  pyproject.toml  requirements.txt  run_eval.py
deepread_sdk/: __init__.py  build.py  enrich.py  llm.py  pagediff.py  reader.py  schema.py  store.py  structure.py  tokens.py
deepreadqa/: __init__.py  choice.py  choice_prompts.py  config.py  harness.py  llm.py  paragraphs.py  prompts.py  retrieval.py  tokens.py  tools.py  verify.py
deepreadqa_api/: __init__.py  __main__.py  app.py  auth.py  collections.py  config.py  engine.py  errors.py  jobs.py  metrics.py  middleware.py  models.py  querylog.py  ratelimit.py
docs/: ALGORITHM.md  behavior_analysis.md  deepread_paper_alignment.md
examples/: ask.sh  client.py  evaluate_choice.py
scripts/: behavior_analysis.py  build_comparison.py  export_openapi.py  review.py  run_ablation_5tools.sh  run_ablation_5tools_models.sh  run_added_models.sh  run_all_models.sh  run_ctrl_kimik3.sh  run_model_eval.sh  run_newstore_models.sh  run_qwen_retry.sh  run_vlmocr_eval.sh  run_wisdoc_opus.sh  score.sh  vlm_ocr_repair.py
tests/: conftest.py  test_api_collections.py  test_api_collections_http.py  test_api_config.py  test_api_engine.py  test_api_http.py  test_api_jobs.py  test_api_querylog.py  test_api_ratelimit.py  test_behavior_analysis.py  test_build.py  test_choice_module.py  test_config.py  test_enrich.py  test_harness.py  test_llm.py  test_pagediff.py  test_paragraphs.py  test_reader.py  test_retrieval.py  test_run_eval.py  test_schema.py  test_store.py  test_structure.py  (+3 more)
(+28 files in other folders)
