[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepreadqa"
version = "0.1.0"
description = "DeepRead SDK + AgenticRAG progressive-reading QA over the CAE knowledge base"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
api = ["fastapi>=0.110", "uvicorn>=0.30"]

[tool.setuptools]
packages = ["deepread_sdk", "deepreadqa", "deepreadqa_api",
            "deepreadqa_api.routes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]
